--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,12 @@
-# Use the official Playwright image which comes with all browser dependencies pre-installed
-FROM mcr.microsoft.com/playwright:v1.41.0-jammy
+# Use the official Playwright image for version 1.48.2 (matching the version in package.json)
+FROM mcr.microsoft.com/playwright:v1.48.2-jammy
 
 # Create app directory
 WORKDIR /app
 
 # Set Playwright to install browsers in a specific, predictable directory
-# and tell it where to look for them at runtime.
-ENV PLAYWRIGHT_BROWSERS_PATH=/app/ms-playwright
+ENV PLAYWRIGHT_BROWSERS_PATH=/ms-playwright
+ENV PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1
 
 # Copy package.json and package-lock.json
 COPY package*.json ./
@@ -17,11 +17,8 @@ RUN npm install
 # Copy all files
 COPY . .
 
-# Install Chromium browser into the specific path defined above
-RUN npx playwright install chromium
-
-# Expose the port your server runs on
+# Expose the port
 EXPOSE 4000
 
-# Start the server
+# Start command
 CMD ["node", "server.js"]
